# pfc3ph

./: calculations.sm  sin_cos_cheap_cal.sm
ips/: sine_gen.slx  sine_gen.slxc
ips/ip_repo/: edit_pfc3ph_inter_v1_0.xpr
ips/ip_repo/pfc3ph_inter_1_0/: component.xml
ips/managed_ip_project/: managed_ip_project.xpr
ips/managed_ip_project/managed_ip_project.tmp/: pfc3ph.xpr  pfc_3ph.xpr
ips/sine_gen2/sine_gen/: Lookup_Table3_block.v  component.xml  gm_sine_gen.slx  hcv  hdlcodegenstatus.mat  sine_3ph_compile.do  sine_3ph_map.txt  sine_3ph_report.html  vc.v
matlab/sim/: HDL_pfc_gold_fi_og.slxc  _vivado_program.cmd  cmods7.xml  ctrl_ez.slxc  fidelity_pfc_vals.m  fil_test_fil.bit  gm_HDL_pfc_gold_fi_og.slxc  pfc_desktop.slxc  pfc_desktop_hdl.slx  pfc_desktop_hdl.slxc  pwm.mat  vivado.jou  vivado_10632.backup.jou  vivado_14560.backup.jou  vivado_14960.backup.jou  vivado_21496.backup.jou  vivado_3060.backup.jou  xvlog.pb
matlab/sim/filsrc/: fil_test_fil.vhd  fil_test_wrapper.vhd  jtag_mac.v  jtag_mac_fifo_wrapper.vhd  mwfil_bus2dut.vhd  mwfil_chifcore.vhd  mwfil_chiftop.vhd  mwfil_controller.vhd  mwfil_dpscram.vhd  mwfil_dut2bus.vhd  mwfil_udfifo.vhd  simcycle_fifo_wrapper.vhd
matlab/sim/fpgaproj/: createproject.tcl  fil_test_fil.xpr  vivado.jou  vivado_12748.backup.jou  vivado_15620.backup.jou  vivado_18572.backup.jou  vivado_19008.backup.jou  vivado_5568.backup.jou
matlab/sim/simscape_system_fil/: simscape_system_fil.bit  simscape_system_fil.mat
stf7/matlab/: HDL_pfc_gold_fi_og.slxc  ctrl_ez.slx  ctrl_ez.slxc  ctrl_ez0.slx  ctrl_ez_pbs.mexw64  ctrl_ez_psf.mexw64  ctrl_ez_sub.slx  ctrl_mngr_sub.slx  dic_pfc3ph.sldd  dictionary.sldd  dsogi.slx  dsogi_3phpll.slx  dsogi_3phpll.slxc  dsogi_3phpll_psf.mexw64  dsogi_pll.mlx  dsogi_pll_3ph.slx.r2023b  dsogi_pll_3ph.slxc  dsogi_pll_3ph_sfun.mexw64  dsogi_pll_3ph_top.slx  dsogi_pll_3ph_top.slxc  fidelity_pfc_vals.m  fidelity_pfcss.slxc  genme_ctrl.m  genme_pll.m  matlab.ioctmprsv  pd_nf_pi_dvco.slx  pd_nf_pi_dvco.slxc  pfc_desktop.slx  pfc_desktop.slxc  script  sine_gen.slxc  stateSpaceParameters.mat  xcopy_ctrl_ez.bat
stf7/matlab/3ph_pil/: .mxproject  3ph_pil.ioc  script
stf7/stf7/pfc3van/: .mxproject  CMakeLists.txt  compile.bat  pfc3van.ioc  startup_stm32f767xx.s  stm32f767zitx_flash.ld
stf7/stf7/pfc3van/Core/ctrl_ez/: CMakeLists.txt
stf7/stf7/pfc3van/Core/ctrl_ez/Inc/: ctrl_ez.h  rtmodel.h
stf7/stf7/pfc3van/Core/ctrl_ez/Src/: const_params.c  ctrl_ez.c
stf7/stf7/pfc3van/ctrl_ez/ARMCortex-M/_ref/ctrl_ez/: CMakeLists.txt  buildInfo.mat  codedescriptor.dmr  compileInfo.mat  ctrl_ez.c  ctrl_ez.h  ctrl_ez.mk  ctrl_ez_comp.rsp  ctrl_ez_mr_codeInfo.mat  ctrl_ez_private.h  ctrl_ez_rtwlib.lib  ctrl_ez_types.h  rtw_proj.tmw
stf7/stf7/pfc3van/ctrl_ez/ARMCortex-M/_ref/ctrl_ez/html/data/: data.js
stf7/stf7/pfc3van/ctrl_ez/ARMCortex-M/_ref/ctrl_ez/html/pages/: ctrl_ez_coderassumptions.html  ctrl_ez_reducedblocks.html  ctrl_ez_replacements.html  ctrl_ez_subsystems.html  ctrl_ez_survey.html
stf7/stf7/pfc3van/ctrl_ez/ARMCortex-M/_ref/ctrl_ez/instrumented/: ctrl_ez.mk  instrumentationInfo.mat
stf7/stf7/pfc3van/ctrl_ez/ARMCortex-M/_ref/ctrl_ez/tmwinternal/: BlockTraceInfo.mat  ModelRefCompileInfo.xml  binfo_mdlref.mat  minfo_mdlref.mat  scv_ref  simulink_cache.xml  tr
stf7/stf7/pfc3van/ctrl_ez/ARMCortex-M/_shared/: CMakeLists.txt  buildInfo.mat  checksummap.mat  compileInfo.mat  const_params.c  filemap.mat  intrp1d_fu32fl.c  intrp1d_fu32fl.h  mw_cmsis.h  plook_u32ff_evenc.c  plook_u32ff_evenc.h  rtwtypeschksum.mat  shared_file.dmr
stf7/stf7/pfc3van/dsogi_3phpll/ARMCortex-M/_ref/dsogi_3phpll/: CMakeLists.txt  buildInfo.mat  codedescriptor.dmr  compileInfo.mat  dsogi_3phpll.c  dsogi_3phpll.h  dsogi_3phpll_mr_codeInfo.mat  dsogi_3phpll_private.h  dsogi_3phpll_types.h  rtw_proj.tmw
stf7/stf7/pfc3van/dsogi_3phpll/ARMCortex-M/_ref/dsogi_3phpll/html/data/: data.js  model.js  pages.js
stf7/stf7/pfc3van/dsogi_3phpll/ARMCortex-M/_ref/dsogi_3phpll/html/pages/: dsogi_3phpll_coderassumptions.html  dsogi_3phpll_reducedblocks.html  dsogi_3phpll_replacements.html  dsogi_3phpll_subsystems.html  dsogi_3phpll_survey.html  dsogi_3phpll_trace.html
stf7/stf7/pfc3van/dsogi_3phpll/ARMCortex-M/_ref/dsogi_3phpll/tmwinternal/: BlockTraceInfo.mat  ModelRefCompileInfo.xml  binfo_mdlref.mat  minfo_mdlref.mat  simulink_cache.xml  tr
vitis/: .analytics
vitis/.metadata/: version.ini
vitis/3phpfc/: .cproject  .project
vitis/3phpfc/_ide/: hwspec.checksum
vitis/3phpfc/src/: lscript.ld  main.c
vitis/3phpfc_system/: .cproject  .project
vitis/design_1_wrapper/: .cproject  platform.spr  platform.tcl
vitis/design_1_wrapper/tempdsa/: design_1_wrapper.mmi  design_1_wrapper.xsa
vivado/: pfc_3ph_vanilla.xpr
vivado/pfc_3ph_vanilla.cache/wt/: synthesis.wdf  webtalk_pa.xml
vivado/pfc_3ph_vanilla.runs/.jobs/: vrs_config_1.xml  vrs_config_2.xml
vivado/pfc_3ph_vanilla.runs/design_1_PFC_3PH_0_0_synth_1/: .vivado.begin.rst  design_1_PFC_3PH_0_0.tcl  design_1_PFC_3PH_0_0.vds  design_1_PFC_3PH_0_0_utilization_synth.pb  design_1_PFC_3PH_0_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
vivado/pfc_3ph_vanilla.runs/design_1_clk_wiz_0_synth_1/: .vivado.begin.rst  design_1_clk_wiz_0.dcp  design_1_clk_wiz_0.tcl  design_1_clk_wiz_0.vds  design_1_clk_wiz_0_utilization_synth.pb  design_1_clk_wiz_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  runme.sh  vivado.jou  vivado.pb
vivado/pfc_3ph_vanilla.runs/design_1_rst_clk_wiz_390M_0_synth_1/: .vivado.begin.rst  design_1_rst_clk_wiz_390M_0.tcl  design_1_rst_clk_wiz_390M_0.vds  design_1_rst_clk_wiz_390M_0_utilization_synth.pb  design_1_rst_clk_wiz_390M_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
vivado/pfc_3ph_vanilla.runs/impl_1/: .place_design.begin.rst  .vivado.begin.rst  design_1_wrapper.tcl  design_1_wrapper.vdi  design_1_wrapper_drc_opted.rpt  design_1_wrapper_opt.dcp  gen_run.xml  init_design.pb  (+5 more)
vivado_lite/: pfc_3ph_lite.xpr
vivado_lite/pfc_3ph_lite.tmp/: sine_wave3ph.xpr
(+4667 files in other folders)
